--- a/gallery.css
+++ b/gallery.css
@@ -321,7 +321,7 @@
 
 .product>p {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: baseline;
     font-family: Nunito;
     font-style: normal;
@@ -336,9 +336,29 @@
     font-weight: normal;
     font-size: 24px;
     line-height: 33px;
-    margin-right: 10px;
 }
 
+.l_ask {
+    margin-right: 17%;
+}
+
+.icon_mobile {
+    display: none;
+}
+.price_product1 {
+    display: flex;
+}
+.icon_desktop {
+    margin-top: 15px;
+    display: block; 
+    height: 20px;
+    width: 20px;
+    margin-left: 10px;
+}
+.product>p>img {
+    height: 20px !important;
+    width: 20px !important;
+}
 .product_1 {
     height: 497px !important;
     width: 545px !important;
@@ -441,8 +461,20 @@ select.brands option[value="ALL"]   { background-image:url(pic/yezze.png);   }
     .page-products{
         grid-template-columns:repeat(5, 20%);
     } 
+    .icon_desktop{
+        display: block;
+    }
+    .icon_mobile {
+        display: none;
+    }
 }
 @media only screen and (max-width: 1725px) and (min-width: 1025px) {
+    .icon_desktop{
+        display: block;
+    }
+    .icon_mobile {
+        display: none;
+    }
     .page-heading__title{
         font-size: 4em;
         line-height: 75px;
@@ -465,7 +497,13 @@ select.brands option[value="ALL"]   { background-image:url(pic/yezze.png);   }
         height: 55% !important;
     }
 }
-@media only screen and (max-width: 1025px) {
+@media only screen and (max-width: 1025px) {.
+    .icon_desktop{
+        display: none !important;
+    }
+    .icon_mobile {
+        display: block;
+    }
      .inputContainer>input {
         display: none;
     }
@@ -727,6 +765,15 @@ select.brands option[value="ALL"]   { background-image:url(pic/yezze.png);   }
     }
 
 } 
+@media only screen and (max-width: 1025px) {
+    .icon_desktop{
+        display: none !important;
+    }
+    .icon_mobile {
+        display: block !important;
+    }
+
+}
 @media only screen and (max-width: 800px) and (min-width: 601px) {
     .page-products {
         grid-template-columns: repeat(2, 50%);
