--- a/gallery.css
+++ b/gallery.css
@@ -283,7 +283,7 @@
     display: grid;
     /*grid-template-rows: repeat(4, 15vw);*/
     grid-template-columns: repeat(5, 18%);
-    grid-template-rows: repeat(4, 24%);
+    grid-template-rows: repeat(1, 24%);
     grid-gap: 24px 5px;
     position: absolute;
 }
@@ -299,6 +299,7 @@
 }
 
 .product>img {
+    z-index: 999;
     width: 143px;
     height: 137px;
     margin-left: 25px
@@ -398,17 +399,14 @@
     font-size: 36px;
     line-height: 49px;
 }
-
-.product_footer {
-    width: 100%;
-    height: 150px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: black;
+.load_more_desktop{
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 5;
+    grid-row-end: 5;
 }
 
-.product_footer>button {
+.load_more {
     background: #FFFFFF;
     border-radius: 500px;
     width: 236px;
@@ -419,6 +417,7 @@
     font-size: 20px;
     line-height: 130.5%;
     height: 75px;
+    
 }
 
 .select2-container--open .select2-dropdown--below {
@@ -457,6 +456,18 @@
 }
 select.brands option[value="ALL"]   { background-image:url(pic/yezze.png);   }
 
+.circle {
+    height: 300px;
+    width: 300px;
+    position: absolute;
+    border-radius: 50%;
+    left: 0;
+    top: -59px;
+    background: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 @media only screen and (max-width: 1300px) and (min-width: 1025px) {
     .page-products{
         grid-template-columns:repeat(5, 20%);
@@ -469,6 +480,9 @@ select.brands option[value="ALL"]   { background-image:url(pic/yezze.png);   }
     }
 }
 @media only screen and (max-width: 1725px) and (min-width: 1025px) {
+    .load_more {
+    width: 93% !important
+    }
     .icon_desktop{
         display: block;
     }
@@ -492,12 +506,16 @@ select.brands option[value="ALL"]   { background-image:url(pic/yezze.png);   }
         height: 100% !important;
         width: 93% !important;
     }
-    .product>img{
+    .product>img {
+        z-index: 999;
         width: 65% !important;
         height: 55% !important;
     }
 }
-@media only screen and (max-width: 1025px) {.
+@media only screen and (max-width: 1025px) {
+    .load_more {
+     width: 93% !important
+    }
     .icon_desktop{
         display: none !important;
     }
@@ -518,6 +536,7 @@ select.brands option[value="ALL"]   { background-image:url(pic/yezze.png);   }
         padding: 0
     }
     .product>img {
+        z-index: 999;
         height: 62% !important;
     }
      .inputContainer {
@@ -772,7 +791,10 @@ select.brands option[value="ALL"]   { background-image:url(pic/yezze.png);   }
     .icon_mobile {
         display: block !important;
     }
-
+    .load_more {
+        width: 93% !important;
+        font-size: 18px;
+    }
 }
 @media only screen and (max-width: 800px) and (min-width: 601px) {
     .page-products {
@@ -783,6 +805,7 @@ select.brands option[value="ALL"]   { background-image:url(pic/yezze.png);   }
         padding: 0 3.5rem 50px
     }
     .product>img {
+        z-index: 999;
         height: 57% !important;
     }
     .page-heading__left {
@@ -803,6 +826,9 @@ select.brands option[value="ALL"]   { background-image:url(pic/yezze.png);   }
     }
 }
 @media only screen and (max-width: 600px) {
+    .load_more {
+        width: 93% !important
+    }
     .page-heading {
         padding: 0 1.5rem 50px;
     }
@@ -838,6 +864,7 @@ select.brands option[value="ALL"]   { background-image:url(pic/yezze.png);   }
         flex-direction: column;
     }
     .product>img {
+        z-index: 999;
         width: 92.78px;
         height: 92.78px;
     }
@@ -943,5 +970,13 @@ select.brands option[value="ALL"]   { background-image:url(pic/yezze.png);   }
     }
     .page_products {
         margin-top: -20px;
+    }
+}
+@media only screen and (max-width: 1400px) and (min-width: 1025px) {
+    .price {
+        font-size: 20px !important;
+    }
+    .product>p {
+        font-size: 12px !important
     }
 }
